# awtk

./: .gitignore  CMakeLists.txt
demos/: CMakeLists.txt  demo_main.c
src/base/: assets_manager.c
tools/: CMakeLists.txt
tools/common/: CMakeLists.txt
tools/font_gen/: CMakeLists.txt
tools/image_gen/: CMakeLists.txt
tools/str_gen/: CMakeLists.txt
tools/theme_gen/: CMakeLists.txt
